fix overlapping css from other components #47

--- a/workout-blog/src/components/FeedPage.css
+++ b/workout-blog/src/components/FeedPage.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-.post {
+.feed .post {
   width: 30%;
   margin: 3%;
   background-color: #ffffff;
